--- a/index.html
+++ b/index.html
@@ -139,6 +139,46 @@
             </div>
         </div>
 
+        <div class="testimonial">
+            <div class="content">
+                <div class="nav-tes">
+                    <div class="row">
+                        <img src="./asset/img/Ellipse 2649.svg" alt="" class="image">
+                        <h3>Peter Moor</h3>
+                        <p>Student of Web Design</p>
+                        <div class="slide">
+                            <img src="./asset/img/slide1.svg" alt="">
+                            <img src="./asset/img/slide2.svg" alt="">
+                            <img src="./asset/img/slide1.svg" alt="">
+
+                        </div>
+                    </div>
+                    <div class="text-test">
+                        <img src="./asset/img/Vector.svg" alt="">
+                        <p>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- features -->
+        <div class="features">
+            <div class="content">
+                <div class="nav">
+                    <div class="images">
+                        <img src="./asset/img/features1.jpg" alt="" class="img_1">
+                        <img src="./asset/img/features2.jpg" alt="" class="img_2">
+                    </div>
+                    <div class="text-featu">
+                        <h2>Learner outcomes through our awesome platform</h2>
+                        <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+                        <p>Lesson Impact Report (2022)</p>
+                        <a class="btn" href="#!">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
