--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Sen:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main style="height: 10000px;">
+    <main>
         <header class="header">
             <div class="content">
                 <div class="navbar">
@@ -107,7 +107,7 @@
                             <p>Get the best course, gain knowledge and shine for your future career.</p>
                             <div class="mb-row">
                                 <strong>$120.75</strong>
-                                <a href="">Book Now</a>
+                                <a class="btn-dk" href="">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                             <p>Get the best course, gain knowledge and shine for your future career.</p>
                             <div class="mb-row">
                                 <strong>$120.75</strong>
-                                <a href="">Book Now</a>
+                                <a class="btn-dk" href="">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                         <div class="desc">
                             <h3>Web App design</h3>
                             <p>Get the best course, gain knowledge and shine for your future career.</p>
-                            <div class="mb-row">
+                            <div class="btn-dk" class="mb-row">
                                 <strong>$120.75</strong>
                                 <a href="">Book Now</a>
                             </div>
@@ -173,12 +173,139 @@
                         <h2>Learner outcomes through our awesome platform</h2>
                         <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
                         <p>Lesson Impact Report (2022)</p>
-                        <a class="btn" href="#!">Sign Up</a>
+                        <a class="btn-feature" href="#!">Sign Up</a>
                     </div>
                 </div>
             </div>
         </div>
 
+        <!-- CTA -->
+        <div class="cta">
+            <div class="content">
+                <div class="nav">
+                    <div class="row">
+                        <h2>Take the next step toward your personal and professional goals with Lesson.</h2>
+                        <p>Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.</p>
+                        <a class="btn-feature" href="">Join Now</a>
+                    </div>
+                    <img src="./asset/img/cta.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+        <!-- blog -->
+        <div class="blog">
+            <div class="content">
+                <div class="ct-blog">
+                    <div class="text-blog">
+                        <h2>Our blog</h2>
+                        <p>Read our regular travel blog and know the latest update<br> of tour and travel</p>
+                    </div>
+                    <div class="nav-blog">
+                        <div class="row">
+                            <img src="./asset/img/blog1.jpg" alt="">
+                            <div class="desc">
+                                <p class="date">21 November 2021</p>
+                                <div class="border"></div>
+                                <h3>How to become a pro web designer in 2022 and get remot job?</h3>
+                                <a href="" class="btn-dk">Read More</a>
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <img src="./asset/img/blog2.jpg" alt="">
+                            <div class="desc">
+                                <p class="date">21 November 2021</p>
+                                <div class="border"></div>
+                                <h3>How to become a pro web designer in 2022 and get remot job?</h3>
+                                <a href="" class="btn-dk">Read More</a>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <img src="./asset/img/blog3.jpg" alt="">
+                            <div class="desc">
+                                <p class="date">21 November 2021</p>
+                                <div class="border"></div>
+                                <h3>How to become a pro web designer in 2022 and get remot job?</h3>
+                                <a href="" class="btn-dk">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <img src="./asset/img/slide1.svg" alt="">
+                        <img src="./asset/img/slide2.svg" alt="">
+                        <img src="./asset/img/slide1.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- footer -->
+
+        <footer class="footer">
+            <div class="content">
+                <div class="nav">
+                    <div class="row">
+                        <h3>Lesson.</h3>
+                        <p class="desc mt-18">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+                        <div class="icon">
+                            <a href="">
+                                <img src="./asset/img/twitter.svg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./asset/img/f.svg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./asset/img/linked_in.svg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./asset/img/instagram.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <h3>Company</h3>
+                        <div class="border"></div>
+                        <div class="link">
+                            <a href="">About Us</a>
+                            <a href="">Features</a>
+                            <a href="">Our Pricing</a>
+                            <a href="">Latest News</a>
+
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <h3>Support</h3>
+                        <div class="border"></div>
+                        <div class="link">
+                            <a href="">FAQ’s</a>
+                            <a href="">Terms & Conditions</a>
+                            <a href="">Privacy Policy</a>
+                            <a href="">Contact Us</a>
+                            
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <h3>Address</h3>
+                        <div class="border"></div>
+                        <div class="link">
+                            <p class="desc"><strong>Location:</strong> 27 Division St, New York, NY 10002, USA</p>
+                            <p class="desc mt-12"><strong>Email:</strong> email@gmail.com</p>
+                            <p class="desc mt-12"><strong>Phone:</strong> + 000 1234 567 890</p>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="border-footer"></div>
+
+                <p class="desc-footer">Copyright ©2022 webdesign.gdn All rights reserved</p>
+            </div>
+        </footer>
     </main>
 
 
